// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DateInput renders a button that triggers the calendar 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 dXGtPO"
>
  <div
    class="ThemeProvider__AppWrapper-sc-1qc9t9l-0 kTyYdK"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 jPjcaB FormField__FormFieldBox-sc-m9hood-0 dAuFqX"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 exeki FormField__FormFieldContentBox-sc-m9hood-1"
      >
        <button
          aria-label="Open Drop"
          class="StyledButtonKind-sc-1vhfpnt-0 jUHAua"
          id="dob"
          type="button"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 hyBrKq"
          >
            <svg
              aria-label="Calendar"
              class="StyledIcon-sc-ofa7kd-0 yGNuR"
              viewBox="0 0 24 24"
            >
              <path
                d="M2 5h20v17H2V5zm16 0V1M6 5V1m-4 9h20"
                fill="none"
                stroke="#000"
                stroke-width="2"
              />
            </svg>
            <div
              class="StyledBox__StyledBoxGap-sc-13pk1d4-1 eFJDQL"
            />
            Pick a date and call me Jim
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`DateInput renders a disabled input 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 dXGtPO"
>
  <div
    class="ThemeProvider__AppWrapper-sc-1qc9t9l-0 kTyYdK"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 jPjcaB FormField__FormFieldBox-sc-m9hood-0 dAuFqX"
    >
      <label
        class="StyledText-sc-1sadyjn-0 lPqQk"
        for="dob"
      >
        Date of birth
      </label>
      <div
        class="StyledBox-sc-13pk1d4-0 gySsHC FormField__FormFieldContentBox-sc-m9hood-1"
      >
        <div
          class="StyledMaskedInput__StyledMaskedInputContainer-sc-99vkfa-1 cmOgly"
        >
          <div
            class="StyledMaskedInput__StyledIcon-sc-99vkfa-2 dscaME"
          >
            <svg
              aria-label="Calendar"
              class="StyledIcon-sc-ofa7kd-0 kAPZSl"
              viewBox="0 0 24 24"
            >
              <path
                d="M2 5h20v17H2V5zm16 0V1M6 5V1m-4 9h20"
                fill="none"
                stroke="#000"
                stroke-width="2"
              />
            </svg>
          </div>
          <input
            autocomplete="off"
            class="StyledMaskedInput-sc-99vkfa-0 kJjiaL"
            disabled=""
            id="dob"
            placeholder="yyyy-mm-dd"
            value=""
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`DateInput renders a simple input 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 dXGtPO"
>
  <div
    class="ThemeProvider__AppWrapper-sc-1qc9t9l-0 kTyYdK"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 jPjcaB FormField__FormFieldBox-sc-m9hood-0 dAuFqX"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 exeki FormField__FormFieldContentBox-sc-m9hood-1"
      >
        <div
          class="StyledMaskedInput__StyledMaskedInputContainer-sc-99vkfa-1 cmOgly"
        >
          <div
            class="StyledMaskedInput__StyledIcon-sc-99vkfa-2 dscaME"
          >
            <svg
              aria-label="Calendar"
              class="StyledIcon-sc-ofa7kd-0 kAPZSl"
              viewBox="0 0 24 24"
            >
              <path
                d="M2 5h20v17H2V5zm16 0V1M6 5V1m-4 9h20"
                fill="none"
                stroke="#000"
                stroke-width="2"
              />
            </svg>
          </div>
          <input
            autocomplete="off"
            class="StyledMaskedInput-sc-99vkfa-0 fimyJu"
            placeholder="yyyy-mm-dd"
            value=""
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`DateInput renders an input with a help message 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 dXGtPO"
>
  <div
    class="ThemeProvider__AppWrapper-sc-1qc9t9l-0 kTyYdK"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 jPjcaB FormField__FormFieldBox-sc-m9hood-0 dAuFqX"
    >
      <label
        class="StyledText-sc-1sadyjn-0 lPqQk"
        for="dob"
      >
        Date of birth
      </label>
      <span
        class="StyledText-sc-1sadyjn-0 cTuErc"
      >
        This is a very cool input
      </span>
      <div
        class="StyledBox-sc-13pk1d4-0 exeki FormField__FormFieldContentBox-sc-m9hood-1"
      >
        <div
          class="StyledMaskedInput__StyledMaskedInputContainer-sc-99vkfa-1 cmOgly"
        >
          <div
            class="StyledMaskedInput__StyledIcon-sc-99vkfa-2 dscaME"
          >
            <svg
              aria-label="Calendar"
              class="StyledIcon-sc-ofa7kd-0 kAPZSl"
              viewBox="0 0 24 24"
            >
              <path
                d="M2 5h20v17H2V5zm16 0V1M6 5V1m-4 9h20"
                fill="none"
                stroke="#000"
                stroke-width="2"
              />
            </svg>
          </div>
          <input
            autocomplete="off"
            class="StyledMaskedInput-sc-99vkfa-0 fimyJu"
            id="dob"
            placeholder="yyyy-mm-dd"
            value=""
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`DateInput renders an input with a label 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 dXGtPO"
>
  <div
    class="ThemeProvider__AppWrapper-sc-1qc9t9l-0 kTyYdK"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 jPjcaB FormField__FormFieldBox-sc-m9hood-0 dAuFqX"
    >
      <label
        class="StyledText-sc-1sadyjn-0 lPqQk"
        for="dob"
      >
        Date of birth
      </label>
      <div
        class="StyledBox-sc-13pk1d4-0 exeki FormField__FormFieldContentBox-sc-m9hood-1"
      >
        <div
          class="StyledMaskedInput__StyledMaskedInputContainer-sc-99vkfa-1 cmOgly"
        >
          <div
            class="StyledMaskedInput__StyledIcon-sc-99vkfa-2 dscaME"
          >
            <svg
              aria-label="Calendar"
              class="StyledIcon-sc-ofa7kd-0 kAPZSl"
              viewBox="0 0 24 24"
            >
              <path
                d="M2 5h20v17H2V5zm16 0V1M6 5V1m-4 9h20"
                fill="none"
                stroke="#000"
                stroke-width="2"
              />
            </svg>
          </div>
          <input
            autocomplete="off"
            class="StyledMaskedInput-sc-99vkfa-0 fimyJu"
            id="dob"
            placeholder="yyyy-mm-dd"
            value=""
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`DateInput renders an input with a validation error 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 dXGtPO"
>
  <div
    class="ThemeProvider__AppWrapper-sc-1qc9t9l-0 kTyYdK"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 jPjcaB FormField__FormFieldBox-sc-m9hood-0 dAuFqX"
    >
      <label
        class="StyledText-sc-1sadyjn-0 lPqQk"
        for="dob"
      >
        Date of birth
      </label>
      <div
        class="StyledBox-sc-13pk1d4-0 bxqGsO FormField__FormFieldContentBox-sc-m9hood-1"
      >
        <div
          class="StyledMaskedInput__StyledMaskedInputContainer-sc-99vkfa-1 cmOgly"
        >
          <div
            class="StyledMaskedInput__StyledIcon-sc-99vkfa-2 dscaME"
          >
            <svg
              aria-label="Calendar"
              class="StyledIcon-sc-ofa7kd-0 kAPZSl"
              viewBox="0 0 24 24"
            >
              <path
                d="M2 5h20v17H2V5zm16 0V1M6 5V1m-4 9h20"
                fill="none"
                stroke="#000"
                stroke-width="2"
              />
            </svg>
          </div>
          <input
            autocomplete="off"
            class="StyledMaskedInput-sc-99vkfa-0 fimyJu"
            id="dob"
            placeholder="yyyy-mm-dd"
            value=""
          />
        </div>
      </div>
      <span
        class="StyledText-sc-1sadyjn-0 boCmmO"
      >
        You failed at this
      </span>
    </div>
  </div>
</div>
`;

exports[`DateInput renders an input with an info message 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 dXGtPO"
>
  <div
    class="ThemeProvider__AppWrapper-sc-1qc9t9l-0 kTyYdK"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 jPjcaB FormField__FormFieldBox-sc-m9hood-0 dAuFqX"
    >
      <label
        class="StyledText-sc-1sadyjn-0 lPqQk"
        for="dob"
      >
        Date of birth
      </label>
      <div
        class="StyledBox-sc-13pk1d4-0 exeki FormField__FormFieldContentBox-sc-m9hood-1"
      >
        <div
          class="StyledMaskedInput__StyledMaskedInputContainer-sc-99vkfa-1 cmOgly"
        >
          <div
            class="StyledMaskedInput__StyledIcon-sc-99vkfa-2 dscaME"
          >
            <svg
              aria-label="Calendar"
              class="StyledIcon-sc-ofa7kd-0 kAPZSl"
              viewBox="0 0 24 24"
            >
              <path
                d="M2 5h20v17H2V5zm16 0V1M6 5V1m-4 9h20"
                fill="none"
                stroke="#000"
                stroke-width="2"
              />
            </svg>
          </div>
          <input
            autocomplete="off"
            class="StyledMaskedInput-sc-99vkfa-0 fimyJu"
            id="dob"
            placeholder="yyyy-mm-dd"
            value=""
          />
        </div>
      </div>
      <span
        class="StyledText-sc-1sadyjn-0 kwoXLv"
      >
        You can set a cool value
      </span>
    </div>
  </div>
</div>
`;
